--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -21,5 +21,26 @@
         android:id="@+id/btnDelegate"
         android:text="Test Delegate"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        />
+    <Button
+        android:id="@+id/btnPopDown"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="在下方弹出pop"
+        app:layout_constraintTop_toBottomOf="@+id/btnDelegate"
+        app:layout_constraintLeft_toLeftOf="parent"
+
+        />
+    <Button
+        android:id="@+id/btnPopCenter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="在页面中间弹出pop"
+        app:layout_constraintTop_toBottomOf="@+id/btnPopDown"
+        app:layout_constraintLeft_toLeftOf="parent"
+
+        />
 </android.support.constraint.ConstraintLayout>
