--- a/Kommon/src/main/res/layout/kommon_tip_network_error.xml
+++ b/Kommon/src/main/res/layout/kommon_tip_network_error.xml
@@ -9,10 +9,10 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:gravity="center"
-        android:paddingBottom="@dimen/dp_4"
-        android:paddingLeft="@dimen/dp_10"
-        android:paddingRight="@dimen/dp_10"
-        android:paddingTop="@dimen/dp_4"
+        android:paddingBottom="4dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="4dp"
         android:text="@string/network_unavailable_tip"
         android:textColor="@color/kommon_red" />
 
