--- a/app/src/main/res/layout/pop_test.xml
+++ b/app/src/main/res/layout/pop_test.xml
@@ -5,7 +5,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
     <TextView
-        android:textColor="@color/white"
+        android:textColor="@color/kommon_white"
         android:text="pop test"
         android:gravity="center"
         android:layout_width="100dp"
