增加  header empty footer  recyclerView //  简易网络请求 NetManager

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -70,4 +70,13 @@
         app:layout_constraintTop_toBottomOf="@+id/btFinger"
         app:layout_constraintLeft_toLeftOf="parent"
         />
+
+    <Button
+        android:id="@+id/btnRecycler"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="RecyclerView"
+        app:layout_constraintTop_toBottomOf="@+id/btnNet"
+        app:layout_constraintLeft_toLeftOf="parent"
+        />
 </android.support.constraint.ConstraintLayout>
