--- a/app/src/main/res/layout/activity_test_delegate.xml
+++ b/app/src/main/res/layout/activity_test_delegate.xml
@@ -37,7 +37,8 @@
         android:text="上次时间"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnSave" />
+        app:layout_constraintTop_toBottomOf="@+id/btnSave"
+        />
 
 
 </android.support.constraint.ConstraintLayout>
