--- a/app/src/main/res/layout/kommon_tip_network_error.xml
+++ b/app/src/main/res/layout/kommon_tip_network_error.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="30dp"
-    android:background="#99EEEEEE">
+    android:background="@color/kommon_light_red">
 
     <TextView
         android:layout_width="wrap_content"
@@ -14,6 +14,6 @@
         android:paddingRight="10dp"
         android:paddingTop="4dp"
         android:text="@string/network_unavailable_tip"
-        android:textColor="@color/kommon_red" />
+        android:textColor="@color/kommon_while_most_color" />
 
 </RelativeLayout>
