--- a/app/src/main/res/layout/activity_test_net.xml
+++ b/app/src/main/res/layout/activity_test_net.xml
@@ -26,8 +26,6 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content" />
 
-
-
 	<android.support.v4.widget.NestedScrollView
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content">
@@ -40,4 +38,9 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content" />
 	</android.support.v4.widget.NestedScrollView>
+	<android.support.v7.widget.RecyclerView
+		android:id="@+id/recycler"
+		android:visibility="gone"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"/>
 </LinearLayout>
