--- a/Kommon/src/main/res/layout/activity_kommon_webview.xml
+++ b/Kommon/src/main/res/layout/activity_kommon_webview.xml
@@ -4,7 +4,7 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
-	<android.support.v7.widget.Toolbar
+	<androidx.appcompat.widget.Toolbar
 		android:id="@+id/mToolbar"
 		android:layout_width="match_parent"
 		android:layout_height="?actionBarSize"
