--- a/app/src/main/res/layout/activity_test_net.xml
+++ b/app/src/main/res/layout/activity_test_net.xml
@@ -26,7 +26,7 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content" />
 
-	<android.support.v4.widget.NestedScrollView
+	<androidx.core.widget.NestedScrollView
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content">
 		<TextView
@@ -37,8 +37,8 @@
 			android:textSize="17sp"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content" />
-	</android.support.v4.widget.NestedScrollView>
-	<android.support.v7.widget.RecyclerView
+	</androidx.core.widget.NestedScrollView>
+	<androidx.recyclerview.widget.RecyclerView
 		android:id="@+id/recycler"
 		android:visibility="gone"
 		android:layout_width="match_parent"
