--- a/app/src/main/res/layout/footer_view.xml
+++ b/app/src/main/res/layout/footer_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -28,4 +28,4 @@
 		android:layout_marginRight="30dp"
 		/>
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
